diesel_compile_tests/tests/fail/insert_from_select_cant_be_used_with_tuples_or_arrays.stderr
error[E0277]: the trait bound `users::table: UndecoratedInsertRecord<posts::table>` is not satisfied
  --> tests/fail/insert_from_select_cant_be_used_with_tuples_or_arrays.rs:34:10
   |
34 |         .values(vec![users, users]);
   |          ^^^^^^ the trait `UndecoratedInsertRecord<posts::table>` is not implemented for `users::table`, which is required by `Vec<users::table>: diesel::Insertable<posts::table>`
   |
   = help: the following other types implement trait `UndecoratedInsertRecord<Table>`:
             <Vec<T> as UndecoratedInsertRecord<Table>>
             <diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<Lhs, Rhs>> as UndecoratedInsertRecord<<Lhs as Column>::Table>>
             <diesel::expression::operators::Eq<Lhs, Rhs> as UndecoratedInsertRecord<<Lhs as Column>::Table>>
             <ColumnInsertValue<T, U> as UndecoratedInsertRecord<<T as Column>::Table>>
             <DefaultableColumnInsertValue<ColumnInsertValue<T, U>> as UndecoratedInsertRecord<<T as Column>::Table>>
             <BatchInsert<T, Table, QId, STATIC_QUERY_ID> as UndecoratedInsertRecord<Table>>
             <diesel::query_builder::insert_statement::insert_from_select::InsertFromSelect<Select, Columns> as UndecoratedInsertRecord<<Columns as diesel::query_builder::insert_statement::column_list::ColumnList>::Table>>
             <diesel::query_builder::insert_statement::ValuesClause<T, Table> as UndecoratedInsertRecord<Table>>
           and $N others
   = note: required for `Vec<users::table>` to implement `diesel::Insertable<posts::table>`

error[E0271]: type mismatch resolving `<table as Insertable<table>>::Values == ValuesClause<_, table>`
  --> tests/fail/insert_from_select_cant_be_used_with_tuples_or_arrays.rs:37:10
   |
37 |         .values((users, users));
   |          ^^^^^^ expected `InsertFromSelect<SelectStatement<...>, ...>`, found `ValuesClause<_, table>`
   |
   = note: expected struct `InsertFromSelect<SelectStatement<FromClause<table>>, (user_id, title, body)>`
              found struct `diesel::query_builder::insert_statement::ValuesClause<_, posts::table>`
   = note: consider using `--verbose` to print the full type name to the console
   = note: required for `(users::table, users::table)` to implement `diesel::Insertable<posts::table>`

error[E0271]: type mismatch resolving `<table as Insertable<table>>::Values == ValuesClause<_, table>`
  --> tests/fail/insert_from_select_cant_be_used_with_tuples_or_arrays.rs:37:17
   |
37 |         .values((users, users));
   |          ------ ^^^^^^^^^^^^^^ expected `ValuesClause<_, table>`, found `InsertFromSelect<SelectStatement<...>, ...>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: expected struct `diesel::query_builder::insert_statement::ValuesClause<_, posts::table>`
              found struct `InsertFromSelect<SelectStatement<FromClause<table>>, (user_id, title, body)>`
   = note: consider using `--verbose` to print the full type name to the console
   = note: required for `(users::table, users::table)` to implement `diesel::Insertable<posts::table>`
note: required by a bound in `IncompleteInsertStatement::<T, Op>::values`
  --> $DIESEL/src/query_builder/insert_statement/mod.rs
   |
   |     pub fn values<U>(self, records: U) -> InsertStatement<T, U::Values, Op>
   |            ------ required by a bound in this associated function
   |     where
   |         U: Insertable<T>,
   |            ^^^^^^^^^^^^^ required by this bound in `IncompleteInsertStatement::<T, Op>::values`
